fix: update font size for presentation title to improve readability

--- a/html-css/Alura/Repositorio/styles/style.css
+++ b/html-css/Alura/Repositorio/styles/style.css
@@ -53,7 +53,7 @@ body{
     gap: 20px;
 }
 .apresentacao__conteudo__titulo{
-    font-size: 32px;
+    font-size: 2rem;
     font-family: var(--fonte-primaria);
 }
 .titulo-destaque{
